--- a/css/main.css
+++ b/css/main.css
@@ -81,3 +81,9 @@ h3 {
 .best-practice-list li {
   margin-bottom: 30px;
 }
+
+.copyright {
+  margin-top: 30px;
+  font-size: 12px;
+  font-weight: 700;
+}
